--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <title>Assignment #5</title>
     </head>
     <body>
+
+        <select name="colors" id="color-select">
+            <option value="">--Select A color</option>
+            <option class="red" id="red" value="red">Red</option>
+            <option class="blue" id="blue" value="blue">blue</option>
+            <option class="green" id="green" value="green">green</option>
+            <option class="yellow" id="yellow" value="yellow">yellow</option>
+        </select>
+
         <div id="onClick" onClick="addRow()">
             <button>Add Row</button>
         </div>
@@ -16,3 +25,4 @@
         <script src="js/script.js"></script>
     </body>
 </html>
+
