Initial commit to branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <div id="onClick" onClick="addRow()">
             <button>Add Row</button>
         </div>
+        <div id="onClick2" onClick="removeRow()">
+            <button>Remove Row</button>
+        </div>
 
         <table id="table">
         </table>
