Added code to add and remove columns, alongside addRow() and removeRow()

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
         <title>Assignment #5</title>
     </head>
     <body>
-        <div id="onClick" onClick="addRow()">
+        <div id="addRowButton" onClick="addRow()">
             <button>Add Row</button>
         </div>
-        <div id="onClick2" onClick="removeRow()">
+        <div id="removeRowButton" onClick="removeRow()">
             <button>Remove Row</button>
+        </div>
+        <div id="addColumnButton" onClick="addColumn()">
+            <button>Add Column</button>
+        </div>
+        <div id="removeColumnButton" onClick="removeColumn()">
+            <button>Remove Column</button>
         </div>
 
         <table id="table">
