--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
         <div id="removeColumnButton" onClick="removeColumn()">
             <button>Remove Column</button>
         </div>
+        <div id="colorAllUncoloredCellsButton" onClick="colorAllUncoloredCells()">
+            <button>Color All Uncolored Cells</button>
+        </div>
         <div id="colorAllCellsButton" onClick="colorAllCells()">
             <button>Color All Cells</button>
+        </div>
+        <div id="resetColorOfCellsButton" onClick="resetColorOfCells()">
+            <button>Reset Color Of Cells</button>
         </div>
 
         <table id="table">
