working on changing color on click

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Assignment #5</title>
     </head>
     <body>
-        <select name="colors" id="color-select" onChange="selectColor(this.value)">
+        <select name="colors" id="color-select" onchange="selectColor(this.value)">
             <option value="">--Select A Color</option>
             <option class="red" id="red" value="red">Red</option>
             <option class="blue" id="blue" value="blue">Blue</option>
